--- a/Forc.toml
+++ b/Forc.toml
@@ -4,6 +4,7 @@ description = "A simple VRF library for Sway"
 entry = "lib.sw"
 license = "MIT"
 name = "vrf"
-version = "0.1.1"
+version = "0.1.2"
+repository = "https://github.com/IGI-111/vrf"
 
 [dependencies]
